--- a/src/draglag.css
+++ b/src/draglag.css
@@ -15,6 +15,13 @@ body {
 	background: #000;
 }
 
+header {
+	pointer-events: none;
+	-webkit-pointer-events: none;
+	-moz-pointer-events: none;
+	-ms-pointer-events: none;
+	-o-pointer-events: none;
+}
 header section {
 	position: absolute;
 	bottom: 0;
@@ -24,6 +31,9 @@ header section {
 	margin: 1em;
 
 	transition: opacity .5s ease;
+}
+header p:last-child {
+	margin-bottom: 0;
 }
 
 h1 {
@@ -36,4 +46,26 @@ main {
 
 	width: 100%;
 	height: 100%;
+}
+
+h2, dl, dt {
+	display: inline-block;
+	margin: 0;
+	font-size: 1em;
+}
+h2 {
+	margin-right: 1.5em;
+}
+dt {
+	font-weight: 500;
+	margin-right: .5em;
+}
+dd {
+	display: none;
+}
+dt.yes {
+}
+dt.no {
+	opacity: 0.5;
+	text-decoration: line-through;
 }
